# ffn-heart-disease

./: README.md  main.py  pyproject.toml  train_network.py
data/: training_metrics_20251203_115535.csv  training_metrics_20251203_150830.csv  training_metrics_20251203_152608.csv
models/: trained_model_20251203_115535.pth  trained_model_20251203_150830.pth  trained_model_20251203_152608.pth
notebooks/: 01-data-ingestion.ipynb  02-results.ipynb
src/: data_loader.py  model.py
